implement mcp servers

--- a/notebooks/04-hybrid-search.ipynb
+++ b/notebooks/04-hybrid-search.ipynb
@@ -1036,7 +1036,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "01-ai-engineering-bootcamp",
    "language": "python",
    "name": "python3"
   },
